// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils load consuming the configuration should read and parse the configuration file 1`] = `
{
  "remotes": {
    "BizModule/Biz": {
      "metadata": {
        "displayGroup": "auxiliary",
        "displayName": "Biz App",
        "icon": "ViewList",
        "order": 30,
        "route": "/biz",
      },
      "url": "http://localhost:4040/remoteEntry.js",
    },
    "TestModule/Bar": {
      "metadata": {
        "displayGroup": "main",
        "displayName": "Bar App",
        "icon": "ViewList",
        "order": 20,
        "route": "/bar",
      },
      "url": "\${APPS_TEST_URL}",
    },
    "TestModule/Foo": {
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "url": "\${APPS_TEST_URL}",
    },
  },
}
`;

exports[`utils load consuming the configuration should read and parse the configuration file 2`] = `
{
  "remotes": {
    "BizModule/Biz": {
      "metadata": {
        "displayGroup": "auxiliary",
        "displayName": "Biz App",
        "icon": "ViewList",
        "order": 30,
        "route": "/biz",
      },
      "url": "http://localhost:4040/remoteEntry.js",
    },
    "TestModule/Bar": {
      "metadata": {
        "displayGroup": "main",
        "displayName": "Bar App",
        "icon": "ViewList",
        "order": 20,
        "route": "/bar",
      },
      "url": "\${APPS_TEST_URL}",
    },
    "TestModule/Foo": {
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "url": "\${APPS_TEST_URL}",
    },
  },
}
`;

exports[`utils merge appshell configs should merge multiple valid configurations 1`] = `
{
  "environment": {
    "biz_module": {
      "RUNTIME_ENV": "\${RUNTIME_ENV}",
      "RUNTIME_ENV_VERSION": "\${RUNTIME_ENV_VERSION}",
    },
    "test_module_bar": {
      "RUNTIME_ENV": "\${RUNTIME_ENV}",
      "RUNTIME_ENV_VERSION": "\${RUNTIME_ENV_VERSION}",
    },
    "test_module_foo": {
      "RUNTIME_ENV": "\${RUNTIME_ENV}",
      "RUNTIME_ENV_VERSION": "\${RUNTIME_ENV_VERSION}",
    },
  },
  "modules": {
    "BizModule": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "BizModule",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleBar": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModuleBar",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleFoo": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModuleBar",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
  },
  "remotes": {
    "BizModule/Biz": {
      "id": "BizModule/Biz",
      "metadata": {
        "displayGroup": "auxiliary",
        "displayName": "Biz App",
        "icon": "ViewList",
        "order": 30,
        "route": "/biz",
      },
      "module": "./Biz",
      "scope": "BizModule",
      "url": "http://localhost:4040/remoteEntry.js",
    },
    "TestModuleBar/Bar": {
      "id": "TestModule/Bar",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Bar App",
        "icon": "ViewList",
        "order": 20,
        "route": "/bar",
      },
      "module": "./Bar",
      "scope": "TestModule",
      "url": "\${APPS_TEST_URL}",
    },
    "TestModuleFoo/Foo": {
      "id": "TestModule/Foo",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "module": "./Foo",
      "scope": "TestModule",
      "url": "\${APPS_TEST_URL}",
    },
  },
}
`;

exports[`utils merge should merge manifests from right to left with merge validator 1`] = `
{
  "environment": {
    "biz_module": {
      "RUNTIME_ENV": "\${RUNTIME_ENV}",
      "RUNTIME_ENV_VERSION": "\${RUNTIME_ENV_VERSION}",
    },
    "test_module_a": {
      "RUNTIME_ENV": "\${RUNTIME_ENV}",
      "RUNTIME_ENV_VERSION": "\${RUNTIME_ENV_VERSION}",
    },
    "test_module_b": {
      "RUNTIME_ENV": "\${RUNTIME_ENV}",
      "RUNTIME_ENV_VERSION": "\${RUNTIME_ENV_VERSION}",
    },
    "test_module_c": {
      "RUNTIME_ENV": "\${RUNTIME_ENV}",
      "RUNTIME_ENV_VERSION": "\${RUNTIME_ENV_VERSION}",
    },
  },
  "modules": {
    "TestModule": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModule",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleA": {
      "exposes": {
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModule",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleC": {
      "exposes": {
        "./Bang": "./src/Entry3",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModule",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
  },
  "remotes": {
    "BizModule/Biz": {
      "id": "BizModule/Biz",
      "metadata": {
        "displayGroup": "auxiliary",
        "displayName": "Biz App",
        "icon": "ViewList",
        "order": 30,
        "route": "/biz",
      },
      "module": "./Biz",
      "scope": "BizModule",
      "url": "http://localhost:4040/remoteEntry.js",
    },
    "TestModuleA/Foo": {
      "id": "TestModule/Foo",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "url": "http://localhost:8080/remoteEntry.js",
    },
    "TestModuleB/Bar": {
      "id": "TestModule/Bar",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "url": "http://localhost:8080/bar/remoteEntry.js",
    },
    "TestModuleB/Foo": {
      "id": "TestModule/Foo",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 20,
        "route": "/foo",
      },
      "url": "http://localhost:8080/foo/remoteEntry.js",
    },
    "TestModuleC/Foo": {
      "id": "TestModule/Foo",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 30,
        "route": "/foo_c",
      },
      "url": "http://localhost:8080/foo_c/remoteEntry.js",
    },
  },
}
`;

exports[`utils merge should merge multiple valid configurations 1`] = `
{
  "environment": {
    "biz_module": {
      "RUNTIME_ENV": "\${RUNTIME_ENV}",
      "RUNTIME_ENV_VERSION": "\${RUNTIME_ENV_VERSION}",
    },
    "test_module_bar": {
      "RUNTIME_ENV": "\${RUNTIME_ENV}",
      "RUNTIME_ENV_VERSION": "\${RUNTIME_ENV_VERSION}",
    },
    "test_module_foo": {
      "RUNTIME_ENV": "\${RUNTIME_ENV}",
      "RUNTIME_ENV_VERSION": "\${RUNTIME_ENV_VERSION}",
    },
  },
  "modules": {
    "BizModule": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "BizModule",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleBar": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModuleBar",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleFoo": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModuleBar",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
  },
  "remotes": {
    "BizModule/Biz": {
      "id": "BizModule/Biz",
      "metadata": {
        "displayGroup": "auxiliary",
        "displayName": "Biz App",
        "icon": "ViewList",
        "order": 30,
        "route": "/biz",
      },
      "module": "./Biz",
      "scope": "BizModule",
      "url": "http://localhost:4040/remoteEntry.js",
    },
    "TestModuleBar/Bar": {
      "id": "TestModule/Bar",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Bar App",
        "icon": "ViewList",
        "order": 20,
        "route": "/bar",
      },
      "module": "./Bar",
      "scope": "TestModule",
      "url": "\${APPS_TEST_URL}",
    },
    "TestModuleFoo/Foo": {
      "id": "TestModule/Foo",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "module": "./Foo",
      "scope": "TestModule",
      "url": "\${APPS_TEST_URL}",
    },
  },
}
`;
